# github-actions-sandbox

./: Dockerfile  pyproject.toml  task-definition.json
.github/workflows/: deploy.yml  test.yml
tests/: test_hello.py
